Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,10 +38,9 @@ steps:
 - task: NuGetCommand@2
   displayName: 'Publish NuGet package'
   inputs:
-    command: push
-    nuGetFeedType: 'internal'
-    feedsToUse: 'select'
-    publishVstsFeed: 'Tailspin.SpaceGame.Web.Models2'
+    command: 'push'
     packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
+    nuGetFeedType: 'internal'
+    publishVstsFeed: 'cd81ce1c-3db3-4ad1-b2b4-6deb5a966e59/c22ab9f0-cc7e-46be-afe0-0ffa5ee99d43'
     allowPackageConflicts: true
   condition: succeeded()
